--- a/src/PyScriptEC/PyScriptEC 2010.csproj
+++ b/src/PyScriptEC/PyScriptEC 2010.csproj
@@ -104,15 +104,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Py3ScriptAutoConfigDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Py3ScriptAutoConfigDialog.cs" />
     <Compile Include="Py3ScriptAutoConfigDialog.Designer.cs">
       <DependentUpon>Py3ScriptAutoConfigDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="PyScriptAutoConfigDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="PyScriptAutoConfigDialog.cs" />
     <Compile Include="Py3ScriptEncConverter.cs" />
     <Compile Include="PyScriptAutoConfigDialog.Designer.cs">
       <DependentUpon>PyScriptAutoConfigDialog.cs</DependentUpon>
@@ -120,9 +116,7 @@
     <Compile Include="PyScriptEncConverter.cs" />
     <Compile Include="Py3ScriptEncConverterConfig.cs" />
     <Compile Include="PyScriptEncConverterConfig.cs" />
-    <Compile Include="PythonAutoConfigDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="PythonAutoConfigDialog.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ECInterfaces\ECInterfaces 2010.csproj">
