--- a/src/PerlExpressionEC/PerlExpressionEC 2010.csproj
+++ b/src/PerlExpressionEC/PerlExpressionEC 2010.csproj
@@ -101,7 +101,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PerlExpressionAutoConfigDialog.cs" />
+    <Compile Include="PerlExpressionAutoConfigDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="PerlExpressionEncConverter.cs" />
     <Compile Include="PerlExpressionEncConverterConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
