--- a/src/EcTranslators/EcTranslators.csproj
+++ b/src/EcTranslators/EcTranslators.csproj
@@ -273,25 +273,28 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Google.Api.Gax">
-      <Version>4.6.0</Version>
+      <Version>4.8.0</Version>
+    </PackageReference>
+    <PackageReference Include="Google.Api.Gax.Grpc">
+      <Version>4.8.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Api.Gax.Rest">
-      <Version>4.6.0</Version>
+      <Version>4.8.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Apis">
-      <Version>1.67.0</Version>
+      <Version>1.68.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Apis.Auth">
-      <Version>1.67.0</Version>
+      <Version>1.68.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Apis.Core">
-      <Version>1.67.0</Version>
+      <Version>1.68.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Apis.Translate.v2">
-      <Version>1.67.0.875</Version>
+      <Version>1.68.0.875</Version>
     </PackageReference>
     <PackageReference Include="Google.Cloud.Translation.V2">
-      <Version>3.3.0</Version>
+      <Version>3.4.0</Version>
     </PackageReference>
     <PackageReference Include="Grpc.Core">
       <Version>2.46.6</Version>
@@ -300,10 +303,10 @@
       <Version>8.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Condition="('$(OS)'=='Windows_NT')">
-      <Version>8.0.1</Version>
+      <Version>8.0.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Condition="('$(OS)'=='Windows_NT')">
-      <Version>8.0.2</Version>
+      <Version>8.0.8</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Condition="('$(OS)'=='Windows_NT')">
       <Version>13.0.3</Version>
@@ -312,13 +315,13 @@
       <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Diagnostics.DiagnosticSource">
-      <Version>8.0.0</Version>
+      <Version>8.0.1</Version>
     </PackageReference>
     <PackageReference Include="System.Memory" Condition="('$(OS)'=='Windows_NT')">
       <Version>4.5.5</Version>
     </PackageReference>
     <PackageReference Include="System.Net.Http.WinHttpHandler" Condition="('$(OS)'=='Windows_NT')">
-      <Version>8.0.0</Version>
+      <Version>8.0.2</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Condition="('$(OS)'=='Windows_NT')">
       <Version>6.0.0</Version>
