--- a/src/EcTranslators/EcTranslators.csproj
+++ b/src/EcTranslators/EcTranslators.csproj
@@ -296,6 +296,9 @@
     <PackageReference Include="Google.Cloud.Translation.V2">
       <Version>3.4.0</Version>
     </PackageReference>
+    <PackageReference Include="Google.Protobuf">
+      <Version>3.28.1</Version>
+    </PackageReference>
     <PackageReference Include="Grpc.Core">
       <Version>2.46.6</Version>
     </PackageReference>
@@ -305,8 +308,14 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Condition="('$(OS)'=='Windows_NT')">
       <Version>8.0.2</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
+      <Version>8.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Condition="('$(OS)'=='Windows_NT')">
       <Version>8.0.8</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions">
+      <Version>8.0.1</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Condition="('$(OS)'=='Windows_NT')">
       <Version>13.0.3</Version>
