--- a/src/EncCnvtrs/app.config
+++ b/src/EncCnvtrs/app.config
@@ -4,6 +4,9 @@
   <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
    <section name="SilEncConverters40.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
   </sectionGroup>
+  <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+   <section name="SilEncConverters40.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </sectionGroup>
  </configSections>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
@@ -29,4 +32,11 @@
    </setting>
   </SilEncConverters40.Properties.Settings>
  </userSettings>
+ <applicationSettings>
+  <SilEncConverters40.Properties.Settings>
+   <setting name="RegexNetLettersToUnescape" serializeAs="String">
+    <value>rnt</value>
+   </setting>
+  </SilEncConverters40.Properties.Settings>
+ </applicationSettings>
 </configuration>
