--- a/src/EncCnvtrs/EncCnvtrs 2010.csproj
+++ b/src/EncCnvtrs/EncCnvtrs 2010.csproj
@@ -309,6 +309,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="NetRegexAutoConfigDialog.resx">
       <DependentUpon>NetRegexAutoConfigDialog.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="ImplTypeList.resx">
       <DependentUpon>ImplTypeList.cs</DependentUpon>
