--- a/src/EcTranslators/AzureOpenAi/AzureOpenAiExe/packages.config
+++ b/src/EcTranslators/AzureOpenAi/AzureOpenAiExe/packages.config
@@ -1,18 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Azure.AI.OpenAI" version="1.0.0-beta.13" targetFramework="net48" />
-  <package id="Azure.Core" version="1.43.0" targetFramework="net48" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
+  <package id="Azure.AI.OpenAI" version="2.1.0" targetFramework="net48" />
+  <package id="Azure.Core" version="1.44.1" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
-  <package id="System.ClientModel" version="1.0.0" targetFramework="net48" />
-  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
-  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
-  <package id="System.Memory.Data" version="8.0.0" targetFramework="net48" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
-  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net48" />
-  <package id="System.Text.Json" version="8.0.5" targetFramework="net48" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="OpenAI" version="2.1.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
+  <package id="System.ClientModel" version="1.2.1" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="9.0.1" targetFramework="net48" />
+  <package id="System.IO.Pipelines" version="9.0.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.6.0" targetFramework="net48" />
+  <package id="System.Memory.Data" version="9.0.1" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="9.0.1" targetFramework="net48" />
+  <package id="System.Text.Json" version="9.0.1" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
