added \fr (footnote ref), and cross reference markers to the PtxProjectConverter

--- a/src/PtxConverters/app.config
+++ b/src/PtxConverters/app.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
@@ -10,9 +10,13 @@
             <setting name="AdditionalMarkersToTranslate" serializeAs="Xml">
                 <value>
                     <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string>fr</string>
                         <string>fq</string>
                         <string>ft</string>
                         <string>fp</string>
+                        <string>xo</string>
+                        <string>xq</string>
+                        <string>xt</string>
                         <string>rq</string>
                         <string>s</string>
                         <string>ms1</string>
