--- a/src/PtxConverters/Properties/Settings.settings
+++ b/src/PtxConverters/Properties/Settings.settings
@@ -1,13 +1,17 @@
-﻿<?xml version='1.0' encoding='utf-8'?>
+<?xml version='1.0' encoding='utf-8'?>
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="SilEncConverters40.PtxConverters.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="AdditionalMarkersToTranslate" Type="System.Collections.Specialized.StringCollection" Scope="Application">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;string&gt;fr&lt;/string&gt;
   &lt;string&gt;fq&lt;/string&gt;
   &lt;string&gt;ft&lt;/string&gt;
   &lt;string&gt;fp&lt;/string&gt;
+  &lt;string&gt;xo&lt;/string&gt;
+  &lt;string&gt;xq&lt;/string&gt;
+  &lt;string&gt;xt&lt;/string&gt;
   &lt;string&gt;rq&lt;/string&gt;
   &lt;string&gt;s&lt;/string&gt;
   &lt;string&gt;ms1&lt;/string&gt;
