--- a/src/EcTranslators/EcTranslators.csproj
+++ b/src/EcTranslators/EcTranslators.csproj
@@ -302,6 +302,9 @@
     <PackageReference Include="Grpc.Core">
       <Version>2.46.6</Version>
     </PackageReference>
+    <PackageReference Include="Grpc.Net.Client">
+      <Version>2.70.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Condition="('$(OS)'=='Windows_NT')">
       <Version>9.0.4</Version>
     </PackageReference>
@@ -340,6 +343,9 @@
     </PackageReference>
     <PackageReference Include="System.Threading.Tasks.Extensions">
       <Version>4.6.3</Version>
+    </PackageReference>
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.6.1</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
