--- a/src/TestEncCnvtrs/TestEncCnvtrs 2010.csproj
+++ b/src/TestEncCnvtrs/TestEncCnvtrs 2010.csproj
@@ -185,6 +185,9 @@
     <PackageReference Include="Grpc.Auth">
       <Version>2.70.0</Version>
     </PackageReference>
+    <PackageReference Include="Grpc.Net.Client">
+      <Version>2.70.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces">
       <Version>9.0.4</Version>
     </PackageReference>
@@ -226,6 +229,9 @@
     </PackageReference>
     <PackageReference Include="System.Text.Json">
       <Version>9.0.4</Version>
+    </PackageReference>
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.6.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
