--- a/src/AIGuesserEC/AIGuesserEC 2010.csproj
+++ b/src/AIGuesserEC/AIGuesserEC 2010.csproj
@@ -41,7 +41,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>$(SolutionDir)output\$(Platform)\$(Configuration)\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;X64</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
@@ -54,7 +54,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>$(SolutionDir)output\$(Platform)\$(Configuration)\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;X64</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
@@ -112,14 +112,18 @@
     </Compile>
     <Compile Include="AdaptItEncConverter.cs" />
     <Compile Include="AdaptItEncConverterConfig.cs" />
-    <Compile Include="AdaptItGuesserAutoConfigDialog.cs" />
+    <Compile Include="AdaptItGuesserAutoConfigDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="AdaptItGuesserAutoConfigDialog.Designer.cs">
       <DependentUpon>AdaptItGuesserAutoConfigDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="AdaptItGuesserEncConverter.cs" />
     <Compile Include="AdaptItGuesserEncConverterConfig.cs" />
     <Compile Include="AdaptItKBReader.cs" />
-    <Compile Include="AdaptItLookupAutoConfigDialog.cs" />
+    <Compile Include="AdaptItLookupAutoConfigDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="AdaptItLookupAutoConfigDialog.Designer.cs">
       <DependentUpon>AdaptItLookupAutoConfigDialog.cs</DependentUpon>
     </Compile>
