windows latest doesn't have ATL by default

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,21 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4.1.1
 
+    # ✅ Install ATL/MFC support
+    - name: Install ATL/MFC components
+      run: |
+        $vsPaths = @(
+          "C:\Program Files\Microsoft Visual Studio\2022\Enterprise",
+          "C:\Program Files\Microsoft Visual Studio\2022\Community",
+          "C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools"
+        )
+        $vsPath = $vsPaths | Where-Object { Test-Path $_ } | Select-Object -First 1
+        if (-not $vsPath) { throw "Could not find Visual Studio installation." }
+        & "$vsPath\Installer\vs_installer.exe" modify --installPath "$vsPath" `
+          --add Microsoft.VisualStudio.Component.VC.ATL `
+          --add Microsoft.VisualStudio.Component.VC.ATLMFC `
+          --quiet --norestart --wait
+
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v2
 
