trying to be more specific w/ which versions EC build needs of ATL, etc.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,11 @@ jobs:
       run: |
         Set-Location "C:\Program Files (x86)\Microsoft Visual Studio\Installer\"
         $vsInstallPath = & .\vswhere.exe -latest -products * -requires Microsoft.Component.MSBuild -property installationPath
-        $atlComponent = '--add Microsoft.VisualStudio.Component.VC.ATL --add Microsoft.VisualStudio.Component.VC.ATLMFC'
+        $atlComponent = @(
+        '--add Microsoft.VisualStudio.Component.VC.14.29.16.11.x86.x64',
+        '--add Microsoft.VisualStudio.Component.VC.14.29.16.11.ATL',
+        '--add Microsoft.VisualStudio.Component.VC.14.29.16.11.MFC'
+        ) -join ' '
         $args = @('modify', "--installPath", "`"$vsInstallPath`"", $atlComponent, '--quiet', '--norestart', '--nocache')
         Start-Process -FilePath .\vs_installer.exe -ArgumentList $args -Wait -PassThru -WindowStyle Hidden
 
